# agent-framework

./: .env.example  README.md  pyproject.toml
examples/: calculator_agent.py  simple_agent.py  simple_agent_gpt4.py
src/agent_framework/: __init__.py  agent.py  language_model.py  message.py  model_factory.py  model_response.py  tool.py  workflow.py
src/agent_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/agent_framework/models/: __init__.py  mock_model.py  openai_model.py  testenv.py
tests/: test_agent.py  test_model_factory.py  test_openai_model.py  test_tool.py  test_workflow.py
